# sortfin

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  start_app.sh
scripts/: __init__.py  main.py
src/sortfin/: __about__.py  __init__.py  account.py  account_path.py  asset.py  asset_database.py  colors.py  fx_market.py  price.py  session.py  sortfin_prompt.sh  statement.py  to_yaml.py
src/sortfin/cli/: __init__.py  cli_statement.py
src/sortfin/cmd/: __init__.py  action.py  main.py  show.py
tests/: test_account.py  test_account_path.py  test_asset.py  test_assetdb.py  test_fx_market.py  test_session.py  test_statement.py  test_yaml.py
